<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/localImage"
            android:layout_width="match_parent"
            android:layout_height="165dp"
            android:scaleType="centerCrop"
            android:src="@drawable/parque" />

        <TextView
            android:id="@+id/localName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kasatoNome"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/saibaMaisButtonKasato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saibaMais"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/localName"
            app:layout_constraintVertical_bias="0.0"
            android:backgroundTint="#699735"/>

        <ImageView
            android:id="@+id/localImage2"
            android:layout_width="match_parent"
            android:layout_height="165dp"
            android:scaleType="centerCrop"
            android:src="@drawable/iguatemi" />

        <TextView
            android:id="@+id/localName2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iguatemi_esplanada"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/saibaMaisButtonIguatemi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saibaMais"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/localName2"
            app:layout_constraintVertical_bias="0.0"
            android:backgroundTint="#699735"/>

        <ImageView
            android:id="@+id/localImage3"
            android:layout_width="match_parent"
            android:layout_height="165dp"
            android:scaleType="centerCrop"
            android:src="@drawable/zoo" />

        <TextView
            android:id="@+id/localName3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zooNome"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/saibaMaisButtonZoo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saibaMais"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/localName3"
            app:layout_constraintVertical_bias="0.0"
            android:backgroundTint="#699735"/>

    </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>